fixtures/frontend/milestone-2/valid/source-option-contract-parameters/main.aivi
type HttpError =
  | Timeout

type Session = { token: Text }

type Credentials =
  Credentials Text Text

type DecodeMode =
  | Strict
  | Permissive

type FsError =
  | Missing

type FsWatchEvent =
  | Changed

value loginBody = Credentials "demo" "secret"
value decodeMode = Strict

signal fileEvents : Signal FsWatchEvent = Changed

value reloadTrigger = fileEvents

@source http.post "/login" with {
    body: loginBody,
    decode: decodeMode
}
signal login : Signal (Result HttpError Session)

@source fs.read "/tmp/demo.txt" with {
    decode: decodeMode,
    reloadOn: reloadTrigger
}
signal fileText : Signal (Result FsError Text)
