fixtures/frontend/milestone-2/invalid/source-option-list-element-mismatch/main.aivi
type FsWatchEvent =
  | Created
  | Changed
  | Deleted

@source fs.watch "/tmp/demo.txt" with {
    events: [Created, True]
}
sig fileEvents : Signal FsWatchEvent
